Changes to be committed: 	new file:   media/queens.png 	new file:   media/reset.css 	new file:   media/vscode.css 	modified:   package.json 	modified:   queens_syntax_highliting/queens.tmLanguage 	modified:   src/extension.ts 	new file:   src/getNonce.ts 	deleted:    src/test/extension.test.ts 	new file:   src/webviewPanel.ts 	modified:   tsconfig.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,24 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "extension-tut-sidebar",
+          "title": "Sidebar",
+          "icon": "media/queens.png"
+        }
+      ]
+    },
+    "views": {
+      "extension-tut-sidebar": [
+        {
+          "type": "webview",
+          "id": "extension-tut-sidebar-view",
+          "name": "Sidebar View"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "extension-tut.helloWorld",
@@ -28,6 +46,10 @@
       {
         "command": "extension-tut.echo",
         "title": "Write to File"
+      },
+      {
+        "command": "extension-tut.showWebview",
+        "title": "Show Webview"
       }
     ],
     "languages": [
