--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,24 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
-		"outDir": "out",
-		"lib": [
-			"ES2022"
-		],
-		"sourceMap": true,
-		"rootDir": "./",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
-}
+	  "module": "Node16",
+	  "target": "ES2022",
+	  "outDir": "./out",
+	  "lib": [
+		"ES2022"
+	  ],
+	  "sourceMap": true,
+	  "rootDir": "./src",
+	  "strict": true,
+	  "esModuleInterop": true, /* Ensures proper module interoperability */
+	  "skipLibCheck": true,    /* Skips type checking of all declaration files (*.d.ts) */
+	  "forceConsistentCasingInFileNames": true
+	},
+	"include": [
+	  "src/**/*.ts"
+	],
+	"exclude": [
+	  "node_modules",
+	  ".vscode-test"
+	]
+  }
+  
