--- a/package.json
+++ b/package.json
@@ -83,6 +83,9 @@
     "lint": "eslint src --ext ts",
     "test": "vscode-test"
   },
+  "dependencies": {
+    "publisher.extension-id": "^1.0.0"
+  },
   "devDependencies": {
     "@types/vscode": "^1.91.0",
     "@types/mocha": "^10.0.6",
